2020-08-31         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Uniq Program): Updated uniq.awk to follow 2020 POSIX.

2020-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix some small mistakes / typos.
	Adjust the prose some as well.

2020-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (BEGINFILE/ENDFILE): Document that as of 5.1.1, in
	a BEGINFILE, the record and fields are cleared.  Fixes an issue
	reported by Pat Rankin in May, 2011.  Remove the related FIXME,
	as well as a FIXME later on that is no longer relevant. Clarify
	the prose in the whole section.

2020-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Arithmetic Ops): Update text to fix a FIXME. Document
	that modulus is POSIX compliant.

2020-08-18         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (String Functions): Fix a typo in the description
	of patsplit. Thanks to Nelson H.F. Beebe for the report.

2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (Profiling): Add explanation of function order.

2020-07-28         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Change a FIXME into a real cross reference. Thanks
	to Antonio Columbo for the report.

2020-07-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document that get_mpfr and get_mpz are obsolete
	and revise doc on handling MPFR and GMP values from an
	extension function.

2020-07-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document how to handle MPFR and GMP values
	from an extension function.

	Unrelated:

	* texinfo.tex: Updated from GNULIB.

2020-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (General Data Types): Document that MPFR
	data types are copied and have to be freed in the
	extension.

2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1, gawktexi.in: Document -I/--trace option.