@@ -1078,11 +1078,11 @@ Decreasing the value of \*(FCNF\fP causes the trailing fields to be lost.\*(CX
 .fi
 \*(CDIt is possible to call the \*(FClength()\fP
 built-in function not only with no argument, but even without parentheses.
-Doing so, however, is poor practice,
-and \*(GK
+Doing so, however, is poor practice.
+\*(CB\*(GK
 issues a warning about its use if \*(FC\-\^\-lint\fP
-is specified on the command line.\*(CB
-.EB "\s+2\f(HBHISTORICAL FEATURES (\*(GK\f(HB)\*(FR\s0"
+is specified on the command line.\*(CL
+.EB "\s+2\f(HBHISTORICAL FEATURES\*(FR\s0"
 .BT
 
 .\" --- Regular Expressions
