@@ -13,7 +13,7 @@
 .		if \w'\(rq' .ds rq "\(rq
 .	\}
 .\}
-.TH GAWK 1 "Jul 2 2020" "Free Software Foundation" "Utility Commands"
+.TH GAWK 1 "Aug 31 2020" "Free Software Foundation" "Utility Commands"
 .SH NAME
 gawk \- pattern scanning and processing language
 .SH SYNOPSIS
@@ -501,7 +501,6 @@ cannot be used in place of
 and
 .BR ^= .
 .RE
-.bp \" MANUAL EDIT
 .TP
 .PD 0
 .B \-r
