@@ -1,3 +1,8 @@
+2020-09-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawk.1: Minor edits.
+	* awkcard.in: Ditto.
+
 2020-08-31         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Uniq Program): Updated uniq.awk to follow 2020 POSIX.
